--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: compilerjava
+    name: grader
   datasource:
     url:  ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/grader}
     username: root
@@ -14,5 +14,5 @@ spring:
 
 server:
   servlet:
-    context-path: /java-compiler-service
+    context-path: /grader-service
   port: 5000
