feat: add swagger but still bug

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -16,3 +16,9 @@ server:
   servlet:
     context-path: /grader-service
   port: 5000
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
