--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -12,6 +12,11 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
+security:
+  jwt:
+    secret-key: mySecretKey123456789012345678901234
+
+
 server:
   servlet:
     context-path: /grader-service
