feat: add dependencies flyway and settings

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: grader
   datasource:
-    url:  ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/grader}
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/grader}
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -11,16 +11,23 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
-
-security:
-  jwt:
-    secret-key: mySecretKey123456789012345678901234
-
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3307/grader}
+    user: root
+    password: password
+    connect-retries: 10
 
 server:
   servlet:
     context-path: /grader-service
   port: 8000
+
+
+security:
+  jwt:
+    secret-key: mySecretKey123456789012345678901234
 
 springdoc:
   api-docs:
