--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Run Container Mysql:8.1 Mock
         run: |
-          docker run \
+          docker run -d \
           --name db \
           --network app-network \
           -e MYSQL_ROOT_PASSWORD=password \
