--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -38,6 +38,6 @@ springdoc:
 
 sandbox:
   java:
-    url: http://localhost:3001/java-sandbox-service/sandbox
+    url: http://localhost:3001
   python:
-    url: http://localhost:3002/python-sandbox-service/sandbox
+    url: http://localhost:3002
